# FoxEngine

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  FoxEngine.sln  LICENSE  README.md  vcpkg.json
.github/: copilot-instructions.md
.github/workflows/: msbuild.yml
Engine/: CMakeLists.txt
Engine/Shaders/: Basic.hlsl  FXAA.hlsl  Particle.hlsl  ParticleCompute.hlsl
Engine/include/Engine/Core/: Window.h
Engine/include/Engine/Renderer/: CascadedShadowMap.h  ConstantBuffer.h  FXAA.h  ForwardPipeline.h  Mesh.h  ParticleSystem.h  RenderTarget.h  ShaderLibrary.h  SpotLight.h
Engine/include/Engine/Scene/: SceneDescriptor.h
Engine/src/Core/: Engine.cpp  ImGuiLayer.cpp  Logger.cpp  Window.cpp
Engine/src/Renderer/: CascadedShadowMap.cpp  FXAA.cpp  ForwardPipeline.cpp  Mesh.cpp  ParticleSystem.cpp  RenderTarget.cpp  ShaderLibrary.cpp  SpotLight.cpp
Engine/src/Scene/: SceneLoader.cpp
FoxEngine/: AlbedoPS.hlsl  Bindable.cpp  Bindable.h  BindableBase.h  Box.cpp  Box.h  Camera.cpp  Camera.h  ConstantBuffer.h  DirectionalLightNode.cpp  DirectionalLightNode.h  Drawable.cpp  Drawable.h  DrawableBase.h  FPVCamera.cpp  FPVCamera.h  FileUtils.h  FoxEngine.cpp  FoxEngine.h  FoxEngine.rc  FoxEngine.vcxproj  FoxEngine.vcxproj.filters  Graphics.cpp  Graphics.h  ImGuiManager.cpp  IndexBuffer.cpp  IndexBuffer.h  InputLayout.cpp  InputLayout.h  Keeyboard.cpp  Keeyboard.h  LightManager.cpp  LightManager.h  Material.cpp  Material.h  Math.h  Mesh.cpp  Mesh.h  MeshNode.cpp  MeshNode.h  (+61 more)
Game/: CMakeLists.txt
Game/src/: main.cpp
TextureConversion/: TextureConversion.vcxproj
(+6 files in other folders)
